# document-qa-rag

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: test.yml
demo/: app.py
docs/: spec.md
ragqa/: __main__.py  answer.py  chunking.py  cli.py  embedding.py  index.py  llm.py  retrieval.py
tests/: conftest.py  test_answer.py  test_chunking.py  test_cli.py  test_demo_imports.py  test_embedding.py  test_index.py  test_llm.py  test_retrieval.py
